[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scripts/Huid.gd" type="Script" id=1]
[ext_resource path="res://UI/PNG/simple/17.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Bubblegum.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/ParallaxBackground.gd" type="Script" id=4]
[ext_resource path="res://sprites/background.png" type="Texture" id=5]
[ext_resource path="res://sprites/07_huge_clouds.png" type="Texture" id=6]
[ext_resource path="res://sprites/_02_trees and bushes.png" type="Texture" id=7]
[ext_resource path="res://UI/table.png" type="Texture" id=8]
[ext_resource path="res://Scripts/janela_scoreBoard.gd" type="Script" id=9]
[ext_resource path="res://Scripts/lbl_Score.gd" type="Script" id=10]
[ext_resource path="res://Sounds/17 Theme for the Nocturnal (online-audio-converter.com).wav" type="AudioStream" id=11]
[ext_resource path="res://UI/close.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 120
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 80
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 55
font_data = ExtResource( 3 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonts/Bubblegum.ttf"

[sub_resource type="DynamicFont" id=8]
size = 70
font_data = SubResource( 7 )

[sub_resource type="DynamicFont" id=9]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 90
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 120
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=12]
size = 110
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 100
font_data = ExtResource( 3 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="bt_ponto" type="TouchScreenButton" parent="."]
visible = false
position = Vector2( 1022.21, 559.704 )
scale = Vector2( 1.53994, 1.1716 )
normal = ExtResource( 2 )
visibility_mode = 1

[node name="ponto" type="Label" parent="bt_ponto"]
margin_left = 105.34
margin_top = 187.016
margin_right = 364.34
margin_bottom = 384.016
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0470588, 0.0431373, 0.0431373, 1 )
text = "Score
"

[node name="btn_play" type="TouchScreenButton" parent="."]
position = Vector2( 260.95, 563.904 )
scale = Vector2( 1.34168, 1.10725 )
normal = ExtResource( 2 )

[node name="play" type="Label" parent="btn_play"]
margin_left = 62.0
margin_top = 184.0
margin_right = 449.0
margin_bottom = 863.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0117647, 0.00784314, 0.00392157, 1 )
text = "Jogar



"

[node name="tempo" type="Timer" parent="."]
one_shot = true

[node name="mensagem" type="Label" parent="."]
margin_left = 647.976
margin_top = 28.2196
margin_right = 1242.97
margin_bottom = 685.22
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "      The
   HOPE OF
TOMORROW

"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 4 )

[node name="lay1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/lay1"]
margin_left = -4.74646
margin_top = 4.58356
margin_right = 2043.25
margin_bottom = 2052.58
texture = ExtResource( 5 )
expand = true

[node name="lay2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 1 )
motion_mirroring = Vector2( 1920, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/lay2"]
margin_left = -12.1665
margin_top = -283.774
margin_right = 2136.83
margin_bottom = 1764.23
texture = ExtResource( 6 )

[node name="lay3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1920, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/lay3"]
margin_left = -2.43323
margin_top = -461.55
margin_right = 2045.57
margin_bottom = 1084.45
texture = ExtResource( 7 )

[node name="LBscore" type="Label" parent="."]
margin_left = 876.361
margin_top = 20.5617
margin_right = 1019.36
margin_bottom = 242.562
custom_fonts/font = SubResource( 3 )

[node name="Janela" type="CanvasLayer" parent="."]

[node name="janela_scoreBoard" type="Sprite" parent="Janela"]
visible = false
position = Vector2( 856.563, 527.521 )
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="btn_save" type="TouchScreenButton" parent="Janela/janela_scoreBoard"]
position = Vector2( 50.9276, 275.324 )
scale = Vector2( 0.660753, 0.325587 )
normal = ExtResource( 2 )

[node name="save" type="Label" parent="Janela/janela_scoreBoard/btn_save"]
margin_left = 98.7855
margin_top = 189.702
margin_right = 421.786
margin_bottom = 386.702
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
text = "Salvar
"

[node name="lbltitle" type="Label" parent="Janela/janela_scoreBoard"]
margin_left = -165.929
margin_top = -378.677
margin_right = 74.0714
margin_bottom = -292.677
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
text = "Score"

[node name="lblnome" type="Label" parent="Janela/janela_scoreBoard"]
margin_left = -344.044
margin_top = 211.08
margin_right = -104.044
margin_bottom = 394.08
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
text = "Nome:

"

[node name="lblpts" type="Label" parent="Janela/janela_scoreBoard"]
margin_left = -346.173
margin_top = 304.617
margin_right = -106.173
margin_bottom = 487.617
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.0431373, 0.0392157, 0.0392157, 1 )
text = "Pontos:

"

[node name="lenome" type="LineEdit" parent="Janela/janela_scoreBoard"]
margin_left = -167.044
margin_top = 205.688
margin_right = 342.956
margin_bottom = 274.688

[node name="lblPontos" type="Label" parent="Janela/janela_scoreBoard"]
margin_left = -109.563
margin_top = 298.303
margin_right = 35.4368
margin_bottom = 373.303
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )

[node name="lbl_Score" type="Label" parent="Janela/janela_scoreBoard"]
margin_left = -341.563
margin_top = -271.521
margin_right = 347.437
margin_bottom = 165.479
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="table_score" type="Sprite" parent="."]
position = Vector2( 1711.28, 115.148 )
texture = ExtResource( 2 )

[node name="lbl_Score" type="Label" parent="."]
margin_left = 1649.81
margin_top = 66.5482
margin_right = 1790.81
margin_bottom = 263.548
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "00
"
script = ExtResource( 10 )

[node name="btn_quit" type="TouchScreenButton" parent="."]
position = Vector2( 984.645, 558.074 )
scale = Vector2( 1.45963, 1.13302 )
normal = ExtResource( 2 )

[node name="Label" type="Label" parent="btn_quit"]
margin_left = 91.2891
margin_top = 174.594
margin_right = 437.289
margin_bottom = 340.594
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sair"

[node name="som" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[node name="Janela_sobre" type="CanvasLayer" parent="."]

[node name="janela_sobre" type="Sprite" parent="Janela_sobre"]
visible = false
position = Vector2( 944.433, 543.815 )
texture = ExtResource( 8 )

[node name="btnClose" type="TouchScreenButton" parent="Janela_sobre/janela_sobre"]
position = Vector2( -450.291, -514.382 )
normal = ExtResource( 12 )

[node name="lbSobre" type="Label" parent="Janela_sobre/janela_sobre"]
margin_left = -158.45
margin_top = -418.309
margin_right = 189.55
margin_bottom = -157.309
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sobre:
"

[node name="lbEscrito" type="Label" parent="Janela_sobre/janela_sobre"]
margin_left = -349.0
margin_top = -260.0
margin_right = 352.0
margin_bottom = -60.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Projeto Escolar Poc 2019
Autor: Gabriel Fernandes Silva Gondim
Orientador: Fernando Paim Lima
IFMG CAMPUS FORMIGA

Email para contato:
Gabrielgondim5609@GMAIL.COM

aLGUNS RECURSOS DO JOGO FORAM 
RETIRADOS DE SITES COMO:

ITCH.IO
OpenGameArt.org
dafont.com

"

[node name="btnsobre" type="TouchScreenButton" parent="."]
position = Vector2( -50.7042, -120.422 )
normal = ExtResource( 2 )

[node name="Label" type="Label" parent="btnsobre"]
margin_left = 95.0281
margin_top = 183.662
margin_right = 509.028
margin_bottom = 400.662
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sobre
"
[connection signal="pressed" from="bt_ponto" to="." method="_on_bt_ponto_pressed"]
[connection signal="released" from="bt_ponto" to="Janela/janela_scoreBoard" method="_on_bt_ponto_released"]
[connection signal="pressed" from="btn_play" to="." method="_on_btn_play_pressed"]
[connection signal="released" from="btn_play" to="." method="_on_btn_play_released"]
[connection signal="timeout" from="tempo" to="." method="_on_tempo_timeout"]
[connection signal="pressed" from="btn_quit" to="." method="_on_btn_quit_pressed"]
[connection signal="pressed" from="Janela_sobre/janela_sobre/btnClose" to="Janela/janela_scoreBoard" method="_on_btnClose_pressed"]
[connection signal="released" from="Janela_sobre/janela_sobre/btnClose" to="." method="_on_btnClose_released"]
[connection signal="pressed" from="btnsobre" to="." method="_on_btn_sobre_pressed"]
